# miso

./: .clang-format  .gitignore  CMakeLists.txt  debug_ui.c  debug_ui.h  game_clock.h  logger.h  main.c  math_utils.h  profiler.c  profiler.h
camera/: camera.c  camera.h
cmake/: miso_boundary_lint.cmake
ecs/: ecs.c  ecs.h  entity.c  entity.h  sparse_set.c  sparse_set.h
engine/include/: miso_buildings.h  miso_camera.h  miso_debug_ui.h  miso_engine.h  miso_events.h  miso_render.h  miso_world.h
engine/src/: miso_buildings.c  miso_camera.c  miso_debug_ui.c  miso_engine.c  miso_events.c  miso_render.c  miso_world.c
engine/src/internal/: miso__engine_internal.h  miso__world_internal.h
renderer/: nuklear_sdl3_gpu.h  renderer.c  renderer.h  ui.c  ui.h
shaders/: sprite.metal
testbed/: main_testbed.c  testbed_game.c  testbed_game.h
tilemap/: tilemap.c  tilemap.h
